public_html/style.css
html, body {
	height: 100vh;
	font-family: 'Raleway', sans-serif !important;
}

h1, h2 {
	font-family: 'Roboto Slab', serif !important;
}

nav {
	background: slategrey;
	box-shadow: 0 1px 5px black;
	opacity: .75;
}

.nav-link {
	scroll-behavior: smooth;
}

.collapsing, .show {
	text-align: right;
}

.scrolling-box {
	height: 100vh;
	overflow-y: scroll;
	scroll-behavior: smooth;
	width: 100%;
}

header {
	position: relative;
	width: 100%;
	min-height: 100vh;
	background-image: linear-gradient(rgba(150, 133, 143, 0.75), rgba(111, 121, 147, 0.75)), url(photos/rmnp.jpg);
	background-position: center;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	background-size: cover;
	-o-background-size: cover;
}

.header-content {
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
}

.about {
	position: relative;
	width: 100%;
	min-height: 100%;
	background-image: linear-gradient(rgba(144, 153, 162, 0.75), rgba(147, 175, 174, 0.75)), url(photos/desertsnow.jpg);
	background-position: center;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	background-size: cover;
	-o-background-size: cover;
	display: flex;
	align-items: center;
}

.opaqueBG {
	background: rgba(234,234,234,0.3);
	padding: 3% 0;
	border-radius: 25px;
}

.contact {
	min-height: 100%;
	width: 100%;
	background-color: #EAEAEA;

}

.contactItem {
	width: 85%;
}

.logo img {
	width: 50px;
	margin: 0 10px;
	padding: 10px 0;
}

footer {
	background-color: #ADADAD
}

.scale {
	transform: scale(1.1);
	transition: .6s;
}

